# microservice_resource_manager

./: README.md  pyproject.toml
microservice_resource_manager/: main.py
microservice_resource_manager/types/: microservice.py  node.py
